--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,9 @@
         <jiraProjectName>WORKFLOWAUTOMATICASSIGNMENT</jiraProjectName>
         <jiraComponentId>10280</jiraComponentId>
     </properties>
+    <scm>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow</developerConnection>
+        <url>http://dev.lutece.paris.fr/viewvc/portal/trunk/plugins/directory-form-workflow</url>
+    </scm>
 </project>
