WORKFLOWAUTOMATICASSIGNMENT-12 : Add the possibility to include the link to view the directory record in BO
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@36481 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
@@ -21,6 +21,11 @@ task_config.label_mailinglist_message=Message
 task_config.label_mailinglist_subject=Subject
 task_config.label_user_name=Sender name
 task_config.label_user_name_comment=Sender name for notification
+task_config.label_view_record=Link to view the record
+task_config.label_view_record_comment=Check this box if you want to add a link to view the record
+task_config.label_freemarker_link_view_record=Freemarker syntax to use to display the link : &#36;&#123;link_view_record&#125;
+task_config.label_label_link_view_record=Label link to view the record
+task_config.label_label_link_view_record_comment=Label link to view the record
 modify_entry_assignment.label.value=Value
 modify_entry_assignment.label.workgroups=Workgroups
 
