--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
@@ -26,9 +26,14 @@ task_config.label_view_record_comment=Check this box if you want to add a link t
 task_config.label_freemarker_link_view_record=Freemarker syntax to use to display the link : &#36;&#123;link_view_record&#125;
 task_config.label_label_link_view_record=Label link to view the record
 task_config.label_label_link_view_record_comment=Label link to view the record
+task_config.label_recipients_cc=Cc
+task_config.label_recipients_cc_comment=Add the email, separated by a ';', you want to send in carbon copies
+task_config.label_recipients_bcc=Bcc
+task_config.label_recipients_bcc_comment=Add the email, separated by a ';', you want to send in blind carbon copies
+task_config.label_mapping_workgroup_mailing_list=Workgroup/Mailing list association
+
 modify_entry_assignment.label.value=Value
 modify_entry_assignment.label.workgroups=Workgroups
-
 
 #Buttons
 task_config.update_button=Update
