WORKFLOWAUTOMATICASSIGNMENT-15 : Add the possibility to send files/images of the record as attachments in the notification
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@37077 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/conf/plugins/workflow-automatic-assignment.properties
+++ b/webapp/WEB-INF/conf/plugins/workflow-automatic-assignment.properties
@@ -6,3 +6,6 @@
 workflow-automatic-assignment.selectable_entry.radio=true
 workflow-automatic-assignment.selectable_entry.checkbox=true
 workflow-automatic-assignment.selectable_entry.select=true
+
+# ID of the accepted entry types separated by a comma for file
+workflow-automatic-assignment.acceptedDirectoryEntryTypesFile=8,10,20
