--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages.properties
@@ -14,7 +14,7 @@ task_config.label.freemarker=Markers
 task_config.full_entry_list.title=Markers list
 task_config.label_directory=Directory choice
 task_config.label_directory_comment=Click on update to reinit the list of entries
-task_config.entry_list.label.noentry=No entry found,please update the directory.
+task_config.entry_list.label.noentry=No entry found, please update the directory.
 task_config.label_notification=Notify the mailing list
 task_config.label_mailinglist_sender_name=Sender name
 task_config.label_mailinglist_message=Message
@@ -31,6 +31,9 @@ task_config.label_recipients_cc_comment=Add the email, separated by a ';', you w
 task_config.label_recipients_bcc=Bcc
 task_config.label_recipients_bcc_comment=Add the email, separated by a ';', you want to send in blind carbon copies
 task_config.label_mapping_workgroup_mailing_list=Workgroup/Mailing list association
+task_config.label_entry_file=File attachments
+task_config.label_file_checked=
+task_config.label_file_name=Reference directory entry
 
 modify_entry_assignment.label.value=Value
 modify_entry_assignment.label.workgroups=Workgroups
