--- a/webapp/WEB-INF/conf/plugins/workflow-automatic-assignment.properties
+++ b/webapp/WEB-INF/conf/plugins/workflow-automatic-assignment.properties
@@ -1,11 +1,10 @@
 #############################################################################
 # Configuration file of module workflow automatic assignment
 
-
 #Type of entry selectable for assignment (false: not selectable, true: selectable)
 workflow-automatic-assignment.selectable_entry.radio=true
 workflow-automatic-assignment.selectable_entry.checkbox=true
 workflow-automatic-assignment.selectable_entry.select=true
 
-# ID of the accepted entry types separated by a comma for file
+# IDs of the accepted entry types separated by a comma for file
 workflow-automatic-assignment.acceptedDirectoryEntryTypesFile=8,20
