WORKFLOWAUTOMATICASSIGNMENT-26 : Add comments and change labels for task Automatic assignment
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@44530 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages.properties
@@ -14,6 +14,7 @@ task_config.label.freemarker=Markers
 task_config.full_entry_list.title=Markers list
 task_config.label_directory=Directory choice
 task_config.label_directory_comment=Click on update to reinit the list of entries
+task_config.label_directory_comment_assign=You can assign a record to a group on a criteria from your directory (checkbox, radio button, combobox...).
 task_config.entry_list.label.noentry=No entry found, please update the directory.
 task_config.label_notification=Notify the mailing list
 task_config.label_mailinglist_sender_name=Sender name
@@ -36,7 +37,9 @@ task_config.label_file_checked=
 task_config.label_file_name=Reference directory entry
 
 modify_entry_assignment.label.value=Value
+modify_entry_assignment.label.entry_value=Value of entry
 modify_entry_assignment.label.workgroups=Workgroups
+modify_entry_assignment.label.comment=Associate an entry value to a workgroup for automatic assignment.
 
 #Buttons
 task_config.update_button=Update
