--- a/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages.properties
@@ -32,6 +32,7 @@ task_config.label_recipients_cc_comment=Add the email, separated by a ';', you w
 task_config.label_recipients_bcc=Bcc
 task_config.label_recipients_bcc_comment=Add the email, separated by a ';', you want to send in blind carbon copies
 task_config.label_mapping_workgroup_mailing_list=Workgroup/Mailing list association
+task_config.no_working_group=No Workgroup
 task_config.label_entry_file=File attachments
 task_config.label_file_checked=
 task_config.label_file_name=Reference directory entry
