WORKFLOWAUTOMATICASSIGNMENT-35  : Moved to Github - SCM Infos and POM updated for GitHub

--- a/pom.xml
+++ b/pom.xml
@@ -1,56 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<parent>
-	  <artifactId>lutece-plugins-pom</artifactId>
-	  <groupId>fr.paris.lutece.plugins</groupId>
-	  <version>3.7</version>
-	</parent>
+    <parent>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0</version>
+    </parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.paris.lutece.plugins</groupId>
-	<artifactId>module-workflow-automatic-assignment</artifactId>
-	<packaging>lutece-plugin</packaging>
-	<version>2.1.2-SNAPSHOT</version>
-	<name>Workflow automatic assignment module</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>fr.paris.lutece.plugins</groupId>
+    <artifactId>module-workflow-automatic-assignment</artifactId>
+    <packaging>lutece-plugin</packaging>
+    <version>2.1.2-SNAPSHOT</version>
+    <name>Workflow automatic assignment module</name>
 
-	<repositories>
-	  <repository>
-	    <id>lutece</id>
-	    <name>luteceRepository</name>
-	    <url>http://dev.lutece.paris.fr/maven_repository</url>
-	    <layout>default</layout>
-	  </repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>lutece</id>
+            <name>luteceRepository</name>
+            <url>http://dev.lutece.paris.fr/maven_repository</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>fr.paris.lutece</groupId>
-			<artifactId>lutece-core</artifactId>
-			<version>[2.4.0,)</version>
-			<type>lutece-core</type>
-		</dependency>
-		<dependency>
-			<groupId>fr.paris.lutece.plugins</groupId>
-			<artifactId>plugin-workflow</artifactId>
-			<version>[2.0.0,)</version>
-			<type>lutece-plugin</type>
-		</dependency>
-		<dependency>
-			<groupId>fr.paris.lutece.plugins</groupId>
-			<artifactId>plugin-directory</artifactId>
-			<version>[2.0.0,)</version>
-			<type>lutece-plugin</type>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>fr.paris.lutece</groupId>
+            <artifactId>lutece-core</artifactId>
+            <version>[2.4.0,)</version>
+            <type>lutece-core</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-workflow</artifactId>
+            <version>[2.0.0,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-directory</artifactId>
+            <version>[2.0.0,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+    </dependencies>
 	
-	<properties>
+    <properties>
         <componentName>workflow-automaticassignment</componentName>
         <jiraProjectName>WORKFLOWAUTOMATICASSIGNMENT</jiraProjectName>
         <jiraComponentId>10280</jiraComponentId>
     </properties>
+    
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment</developerConnection>
-        <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</url>
     </scm>
+    
 </project>
