--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-workflow-automatic-assignment</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>2.1.2</version>
     <name>Workflow automatic assignment module</name>
 
     <repositories>
@@ -53,6 +53,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-wf-module-workflow-automatic-assignment.git</url>
-    </scm>
+      <tag>lutece-wf-module-workflow-automatic-assignment-2.1.2</tag>
+  </scm>
     
 </project>
